image_value_editor: prevent large images to overflow

--- a/app/modules/entities/scss/_image_value_editor.scss
+++ b/app/modules/entities/scss/_image_value_editor.scss
@@ -2,6 +2,7 @@
   // Avoid to have a height jump when passing in edit mode
   min-height: 300px;
   .edit-mode{
+    max-width: 100%;
     flex: 1 0 auto;
     // @include display-flex(column, flex-start);
     // Push it up
